<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context="org.ruizlab.phoni.kargamobile.MainActivity">


    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="66dp"
        android:background="@drawable/rectanglebg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSourceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_header"
            android:textColor="#FA4616"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvGreaterThan1"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:text="@string/greaterthanstring" />

            <TextView
                android:id="@+id/tvSourceFile"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:text="@string/source_file"
                android:textSize="12sp" />

        </LinearLayout>


        <Button
            android:id="@+id/bSelectSourceData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0021A5"
            android:text="@string/select_source_data" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="210dp"
        android:background="@drawable/rectanglebg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDatabaseHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/database_header"
            android:textColor="#FA4616"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvGreaterThan2"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:text="@string/greaterthanstring" />

            <TextView
                android:id="@+id/tvDatabaseFile"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:text="@string/database_file"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/bSelectDatabaseData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0021A5"
            android:text="@string/select_database_data" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="402dp"
        android:layout_marginEnd="-1dp"
        android:padding="10dp"
        android:text="" />

    <Button
        android:id="@+id/bScanMatch"
        android:layout_width="180dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:backgroundTint="#0021A5"
        android:enabled="false"
        android:text="@string/scan_match"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="240dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bShowResults"
            android:layout_width="180dp"
            android:layout_height="64dp"
            android:text="@string/show_results"
            android:backgroundTint="#0021A5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/pbMatchProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="#FA4616"
            android:visibility="gone"/>

    </LinearLayout>



</RelativeLayout>
